# cleavage-enrichment

./: .gitattributes  README.md  deploy.sh  docker-compose.yaml  dockerfile
.husky/: pre-commit
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/cleavage_enrichment/: apps.py  barplot.py  cleavage_enrichment.py  constants.py  data.py  heatmap.py  importing.py  logoplot.py  processing.py  urls.py  views.py
backend/frontend/: urls.py  views.py
backend/static/: index.html  peptides.txt  proteinGroups_small.txt
backend/static/assets/: index-CwiJe07N.css
backend/static/dev/: index.html
backend/static/dev/assets/: index-BrMyInT3.js  index-qLZqTek8.css
backend/static/frontend/: index.html
backend/static/frontend/assets/: index-Bhax-rc_.css  index-nmxyfewL.css
backend/static/prod/: index.html
backend/static/prod/assets/: index-BHWEw1UE.js  index-CCq4sBaS.css
backend/tests/: test_barplot.py  test_dummy.py
cleavviz/: README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
cleavviz/src/cleavviz/: barplot.py  constants.py  data.py  heatmap.py  io_utils.py  logoplot.py  processing.py
cleavviz/src/cleavviz/cleavage_calculation/: cleavage_enrichment_analysis.py  constants.py  database_manager.py  enzyme_motifs.parquet  helper.py  importer.py  kmer.py  matching.py  motifs.py  preprocessing.py  regex_trie.py
cleavviz/tests/: test_file_convert.py
django_server/: .dockerignore  .gitignore  pyproject.toml
django_server/cleavage_enrichment/: cleavage_enrichment.py  heatmap.py  io_utils.py  views.py
django_server/cleavviz_app/: apps.py  urls.py  views.py
django_server/django_server/: asgi.py  settings.py  urls.py  wsgi.py
django_server/static/: MaxQuantImport_1_protein_df.csv  PeptideImport.csv  PeptideImport_1_peptide_df.csv  meta.csv
django_server/static/frontend/: index.html
django_server/static/frontend/assets/: index-APmRIovw.css  index-C9xlv7hs.css  index-Csxvho1A.css  index-DyvHX1ta.css
django_server/static/small_sampledata/: PeptideImport.csv  uniprot_sprot.fasta
django_server/tests/: test_barplot.py
django_server/utils/: logging.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test.js  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css  index.jsx
frontend/src/assets/: sample-data.tsx
frontend/src/components/BackendPlot/: BackendPlot.props.tsx  BackendPlot.tsx  index.ts
frontend/src/components/BarPlot/: BarPlot.props.tsx  BarPlot.tsx  index.ts
frontend/src/components/BarplotForm/: BarplotForm.props.tsx  BarplotForm.tsx  index.ts
frontend/src/components/FileUpload/: FileUpload.props.tsx  FileUpload.tsx  index.ts
frontend/src/components/Form/: Form.props.tsx  Form.tsx  index.ts
frontend/src/components/Heatmap/: Heatmap.props.tsx  Heatmap.tsx  index.ts
frontend/src/components/HetamapForm/: HeatmapForm.props.tsx  HeatmapForm.tsx  index.ts
frontend/src/components/LoadingSpinner/: LoadingSpinner.tsx
frontend/src/components/ProteinView/: ProteinView.props.tsx  ProteinView.tsx  index.ts
(+12 files in other folders)
