[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Krohn",email = "jonas.krohn@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-types (>=0.20.0,<0.21.0)",
    "django-stubs-ext (>=5.2.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
