[project]
name = "cleavviz"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Krohn",email = "jonas.krohn@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pyteomics (>=4.7.5,<5.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "logomaker (>=0.8.7,<0.9.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "cleavviz", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
