[project]
name = "django_server"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Krohn",email = "jonas.krohn@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-types (>=0.20.0,<0.21.0)",
    "django-stubs-ext (>=5.2.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "cleavviz",
    "pyarrow (>=21.0.0,<22.0.0)",
]

[tool.poetry]
name = "django_server"
version = "0.1.0"
description = ""
authors = [
    "Jonas Krohn"
]
packages = [{include = "django_server", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
cleavviz = { path = "../cleavviz", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
kaleido = "^1.0.0"
plotly = "^6.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
